Edited modal recommendations- need to connect to back end

--- a/front-end/src/app/event/new-event/form-modal/form-modal.component.html
+++ b/front-end/src/app/event/new-event/form-modal/form-modal.component.html
@@ -7,6 +7,11 @@
       </header>
       <section class="modal-card-body">
           
+
+        <app-modal-recommendations></app-modal-recommendations>
+
+
+
         <div class="select">
           <select name="selected" [(ngModel)]="selected">
             <option value="">Select a form</option>
