--- a/front-end/src/app/event/new-event/new-event.component.html
+++ b/front-end/src/app/event/new-event/new-event.component.html
@@ -11,6 +11,7 @@
           <input type="text" #name="ngModel" [(ngModel)]="newEventService.selectedEvent.name" name="name" placeholder="Event Name"
           required  [ngClass]="{'invalid-textbox' :newEventForm.submitted}">
           <!--Here i insert chip material-->
+
           <!--Event Members Input-->
           <mat-label class="label">Members Email</mat-label>
           <mat-form-field class="example-chip-list">
@@ -30,16 +31,15 @@
           </mat-form-field>
           <!--Event Form Id Input-->
 
-            <label class="label">Form ID</label>
-          <input type="text" #password="ngModel" [(ngModel)]="newEventService.selectedEvent.formID" name="formID" placeholder="Form ID"
-          minlength="4" required [ngClass]="{'invalid-textbox' :newEventForm.submitted}">
+            <label class="label">Event Form Selection</label>
+          <!-- <input type="text" > -->
           <div class="buttons">
-            <div>
+            <div #password="ngModel" [(ngModel)]="newEventService.selectedEvent.formID" name="formID" placeholder="Form ID"
+            minlength="4" required [ngClass]="{'invalid-textbox' :newEventForm.submitted}">
               <button id="select-form-btn" class="button is-link" (click)="selectItem()" (onClose)="showModal=false">Select Event Form</button>
             </div>
             <p *ngIf="selected">Selected: {{ selected }}</p>
             <app-form-modal *ngIf="showModal" (onClose)="selectedItem($event)"></app-form-modal>
-           
           </div>
           <!--Event Message Input-->
           <label class="label">Message</label>
