style fix- still need to handle responsiveness

--- a/front-end/src/app/event/new-event/form-modal/modal-recommendations/modal-recommendations.component.html
+++ b/front-end/src/app/event/new-event/form-modal/modal-recommendations/modal-recommendations.component.html
@@ -1,9 +1,7 @@
 <div id="recommendation-wrapper">
 <img id="vacation-img" src="../../../../../assets/img/vacation.jpeg"/>
 <img id="vacation-img" src="../../../../../assets/img/vacation2.jpeg"/>
-<img id="vacation-img" src="../../../../../assets/img/vacation.jpeg"/>
-<img id="vacation-img" src="../../../../../assets/img/vacation.jpeg"/>
-<img id="vacation-img" src="../../../../../assets/img/vacation.jpeg"/>
-
-
+<img id="vacation-img" src="../../../../../assets/img/vacation3.jpeg"/>
+<img id="vacation-img" src="../../../../../assets/img/vacation4.jpeg"/>
+<img id="vacation-img" src="../../../../../assets/img/vacation5.jpeg"/>
 </div>
