--- a/front-end/src/app/event/new-event/new-event.component.html
+++ b/front-end/src/app/event/new-event/new-event.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <body>
-  <div class="wrapper">
+  <div class="wrapper" id="new-event-wrapper">
     <div class="field is-horizontal" id="formContent">
       <div class="field-body">
         <!--Event Form Creation-->
