--- a/front-end/src/app/event/new-event/form-modal/form-modal.component.html
+++ b/front-end/src/app/event/new-event/form-modal/form-modal.component.html
@@ -5,12 +5,12 @@
         <p class="modal-card-title">Event Forms</p>
         <button class="delete" aria-label="close" (click)="cancel()"></button>
       </header>
+      
+      <section>
+        <app-modal-recommendations id="recommendation-display"></app-modal-recommendations>
+      </section>
+
       <section class="modal-card-body">
-          
-
-        <app-modal-recommendations></app-modal-recommendations>
-
-
 
         <div class="select">
           <select name="selected" [(ngModel)]="selected">
@@ -31,6 +31,9 @@
         </div>
   
       </section>
+
+
+
       <footer class="modal-card-foot">
         <button class="button is-success" (click)="selectedItem()">Show Form</button>
         <button class="button" (click)="cancel()">Cancel</button>
