add submit functionality to recommendation popup

--- a/front-end/src/app/recommendation-popup/recommendation-popup/recommendation-popup.component.html
+++ b/front-end/src/app/recommendation-popup/recommendation-popup/recommendation-popup.component.html
@@ -129,7 +129,7 @@
 
       </section>
       <footer class="modal-card-foot">
-        <button class="button is-success">Send Survey</button>
+        <button class="button is-success" id="submit-recommendations" (click)="sendRecommendations()">Send Survey</button>
         <!-- <button class="button">Go Back to Sign-In</button>
         <button class="button">Contact Us</button> -->
       </footer>
