Fixed dynamic loading of recomendation pop up

--- a/front-end/src/app/recommendation-popup/recommendation-popup/recommendation-popup.component.css
+++ b/front-end/src/app/recommendation-popup/recommendation-popup/recommendation-popup.component.css
@@ -5,16 +5,18 @@ th{
     font-size: 19px;
     background: unset;
 }
-.wrapper {
+#modal-title-wrapper {
     display: flex;
-    justify-content: space-between;
     width: 100%;
     padding: 20px;
+    flex-direction: column;
     font-family: fantasy;
     padding: 1%;
-    flex-direction: row;
     font-size: 20px;
 }
-#modal-title-wrapper{
-    justify-content:flex-end ;
-}
+
+/* .label-wrapper-rec{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+} */
