--- a/front-end/src/app/event/new-event/form-modal/modal-recommendations/modal-recommendations.component.html
+++ b/front-end/src/app/event/new-event/form-modal/modal-recommendations/modal-recommendations.component.html
@@ -1,7 +1,23 @@
 <div id="recommendation-wrapper">
-<img id="vacation-img" src="../../../../../assets/img/vacation.jpeg"/>
-<img id="vacation-img" src="../../../../../assets/img/vacation2.jpeg"/>
-<img id="vacation-img" src="../../../../../assets/img/vacation3.jpeg"/>
-<img id="vacation-img" src="../../../../../assets/img/vacation4.jpeg"/>
-<img id="vacation-img" src="../../../../../assets/img/vacation5.jpeg"/>
+    <div class="recommendation-feild">
+        <label class="label">Picnic At the See</label>
+        <img id="rec-first" class="vacation-img" src="../../../../../assets/img/vacation.jpeg" (click)="displayForm()"/>
+    </div>
+    <div class="recommendation-feild">
+        <label class="label">Eilat Family Vacation</label>
+        <img id="rec-second" class="vacation-img" src="../../../../../assets/img/vacation2.jpeg"  (click)="displayForm()"/>
+    </div>
+    <div class="recommendation-feild">
+        <label class="label">Chyack At the Goshrim</label>
+        <img id="rec-third" class="vacation-img" src="../../../../../assets/img/vacation3.jpeg"  (click)="displayForm()"/>
+    </div>
+    <div class="recommendation-feild">
+        <label class="label">Vacation</label>
+        <img id="rec-forth" class="vacation-img" src="../../../../../assets/img/vacation4.jpeg"  (click)="displayForm()"/>
+    </div>
+    <div class="recommendation-feild">
+        <label class="label">Vacation</label>
+        <img id="rec-fifth" class="vacation-img" src="../../../../../assets/img/vacation5.jpeg"  (click)="displayForm()"/>
+    </div>
+
 </div>
