FIxed mails and new event save

--- a/front-end/src/app/event/new-event/form-modal/form-modal.component.html
+++ b/front-end/src/app/event/new-event/form-modal/form-modal.component.html
@@ -3,6 +3,7 @@
     <div class="modal-card">
       <header class="modal-card-head">
         <p class="modal-card-title">Event Forms</p>
+        <img id="recommendation-info-icon" src="../../../../assets/icons/information-button.png"/>
         <button class="delete" aria-label="close" (click)="cancel()"></button>
       </header>
       
@@ -24,7 +25,7 @@
             <option value="organize-form">
               <label>Organize Trip Form</label>
             </option>
-            <option value="Picnic-Form">
+            <option value="picnic-form">
               <label>Picnic Form</label>
             </option>
           </select>
