Created sialog for recommendations

--- a/front-end/src/app/event/new-event/form-modal/form-modal.component.html
+++ b/front-end/src/app/event/new-event/form-modal/form-modal.component.html
@@ -1,3 +1,4 @@
+
 <div class="modal is-active">
     <div class="modal-background"></div>
     <div class="modal-card">
@@ -32,7 +33,7 @@
         </div>
   
       </section>
-
+  
 
 
       <footer class="modal-card-foot">
@@ -40,4 +41,7 @@
         <button class="button" (click)="cancel()">Cancel</button>
       </footer>
     </div>
+    <app-info-dialog></app-info-dialog>
+    
   </div>
+
