--- a/front-end/src/app/event/new-event/form-modal/modal-recommendations/modal-recommendations.component.html
+++ b/front-end/src/app/event/new-event/form-modal/modal-recommendations/modal-recommendations.component.html
@@ -1,11 +1,11 @@
 <div id="recommendation-wrapper">
-    <div class="recommendation-feild">
-        <label class="label">Picnic At the See</label>
+    <div class="recommendation-feild" >
+        <label  class="label">Picnic At the See</label>
         <img id="rec-first" class="vacation-img" src="../../../../../assets/img/vacation.jpeg" (click)="displayForm()"/>
     </div>
     <div class="recommendation-feild">
         <label class="label">Eilat Family Vacation</label>
-        <img id="rec-second" class="vacation-img" src="../../../../../assets/img/vacation2.jpeg"  (click)="displayForm()"/>
+        <img class="btn btn-outline-secondary" data id="rec-second" class="vacation-img" src="../../../../../assets/img/vacation2.jpeg"  (click)="displayForm()"/>
     </div>
     <div class="recommendation-feild">
         <label class="label">Chyack At the Goshrim</label>
