--- a/front-end/src/app/event/new-event/form-modal/modal-recommendations/modal-recommendations.component.html
+++ b/front-end/src/app/event/new-event/form-modal/modal-recommendations/modal-recommendations.component.html
@@ -4,7 +4,7 @@
         <img id="rec-first" class="vacation-img" src="../../../../../assets/img/vacation.jpeg" (click)="displayForm()"/>
     </div>
     <div class="recommendation-feild">
-        <label class="label">Eilat Family Vacation</label>
+        <label class="label">Surprize Birthday party</label>
         <img class="btn btn-outline-secondary" data id="rec-second" class="vacation-img" src="../../../../../assets/img/vacation2.jpeg"  (click)="displayForm()"/>
     </div>
     <div class="recommendation-feild">
@@ -12,11 +12,11 @@
         <img id="rec-third" class="vacation-img" src="../../../../../assets/img/vacation3.jpeg"  (click)="displayForm()"/>
     </div>
     <div class="recommendation-feild">
-        <label class="label">Vacation</label>
+        <label class="label">Eilat Family Vacation</label>
         <img id="rec-forth" class="vacation-img" src="../../../../../assets/img/vacation4.jpeg"  (click)="displayForm()"/>
     </div>
     <div class="recommendation-feild">
-        <label class="label">Vacation</label>
+        <label class="label">Vacation at Dead Sea</label>
         <img id="rec-fifth" class="vacation-img" src="../../../../../assets/img/vacation5.jpeg"  (click)="displayForm()"/>
     </div>
 
