--- a/front-end/src/app/home/home/home.component.html
+++ b/front-end/src/app/home/home/home.component.html
@@ -1,6 +1,5 @@
 <!--   The Heder of the home page -->
 <app-header></app-header>
-<!--Footer insertion  to fix-->
 <app-recommendation-popup></app-recommendation-popup>
 <header>
   <div class="overlay">
@@ -30,4 +29,21 @@
     </div>
   </div>
 </header>
+<!--Footer insertion  to fix-->
 <app-footer></app-footer>
+<div class="discription-wrapper">
+  <img src="../../../assets/img/discription-image.jpg">
+
+</div>
+
+<!-- <div class="discription-wrapper">
+</div> -->
+<!-- <app-footer></app-footer>
+<div class="discription-wrapper">
+  <img src="../../../assets/img/discription4.jpeg">
+</div>
+<app-footer></app-footer>
+<div class="discription-wrapper">
+  <img src="../../../assets/img/discription5.jpeg">
+</div>
+<app-footer></app-footer> -->
