--- a/front-end/src/app/home/home/home.component.html
+++ b/front-end/src/app/home/home/home.component.html
@@ -32,6 +32,7 @@
 <!--Footer insertion  to fix-->
 <app-footer></app-footer>
 <div class="discription-wrapper">
+<app-about id="about-container"></app-about>
   <img src="../../../assets/img/discription-image.jpg">
 
 </div>
