--- a/front-end/src/app/footer/footer.component.html
+++ b/front-end/src/app/footer/footer.component.html
@@ -8,9 +8,8 @@
         <div class="modal">
           <div class="modal-background"></div>
           <div class="modal-content">
-            <!-- Any other Bulma elements you want -->
+            <app-about ></app-about>
           </div>
-          <button class="modal-close is-large" aria-label="close"></button>
         </div>
 
     </div>
