--- a/front-end/src/app/home/home/home.component.html
+++ b/front-end/src/app/home/home/home.component.html
@@ -31,10 +31,10 @@
 </header>
 <!--Footer insertion  to fix-->
 <app-footer></app-footer>
+<app-about ></app-about>
 <div class="discription-wrapper">
-<app-about id="about-container"></app-about>
-  <img src="../../../assets/img/discription-image.jpg">
 
+  <img src="../../../assets/img/discription-image.jpg">
 </div>
 
 <!-- <div class="discription-wrapper">
