--- a/front-end/src/app/home/home-page-utils/about/about.component.html
+++ b/front-end/src/app/home/home-page-utils/about/about.component.html
@@ -1,40 +1,36 @@
 <ul class="tilesWrap">
 	<li>
 		<h2>01</h2>
-		<h3>Title 1</h3>
+		<h3>Fact 1</h3>
 		<p>
-			Lorem Ipsum is simply dummy text of the printing and typesetting   
-			industry. Lorem Ipsum has been the industry's standard dummy text ever 
-			since the 1500s.
+            Technology Improves Performance: Event technology can help increase event attendance 20%, increase productivity 27%, and decrease costs 20-30%
 		</p>
-		<button>Read more</button>
+		<button (click)="openWeb()">Read more</button>
 	</li>
 	<li>
 		<h2>02</h2>
-		<h3>Title 2</h3>
+		<h3>Fact 2</h3>
 		<p>
-			When an unknown printer took a galley of type and scrambled it to make 
-			a type specimen book. It has survived not only five centuries.
+            Revenue and Cost Split: 50% of event revenue typically comes from registration fees.
+            Food and beverage expenses typically take up 33% of the overall budget
 		</p>
-		<button>Read more</button>
+		<button (click)="openWeb()">Read more</button>
 	</li>
 	<li>
 		<h2>03</h2>
 		<h3>Title 3</h3>
 		<p>
-			But also the leap into electronic typesetting, remaining essentially 
-			unchanged. It was popularised in the 1960s.
+			Event Industry Growth: The projected job growth rate for the events industry is 10% between 2014 and 2024
 		</p>
-		<button>Read more</button>
+		<button (click)="openWeb()">Read more</button>
 	</li>
 	<li>
 		<h2>04</h2>
-		<h3>Title 4</h3>
+		<h3>Fact 4</h3>
 		<p>
-			With the release of Letraset sheets containing Lorem Ipsum passages,  
-			and more recently with desktop publishing software like Aldus PageMaker 
-			including versions of Lorem Ipsum.
+			Digital Payments a Must: 9% of Americans carry no cash and more than half carry $20 or less. Mobile payment services have revolutionized the way we pay, making cash increasingly obsolete.
+            Make sure the event and your vendors accept digital payment. (Source)
 		</p>
-		<button>Read more</button>
+		<button (click)="openWeb()">Read more</button>
 	</li>
 </ul>
