--- a/front-end/src/app/home/home/home.component.css
+++ b/front-end/src/app/home/home/home.component.css
@@ -162,12 +162,12 @@ h2 {
 
 
 .home-btn {
-  box-shadow: 0px 0px 0px 2px rgba(255, 255, 255, 0.16) inset, 0px 0px 10px 0px #DE3964;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#DE3964), to(rgba(154, 40, 87, 0.24))), url("http://nightlifeassociates.com/wp-content/uploads/2014/03/hakkasan-nightclub_tiesto-smalls.jpg");
-  background-image: linear-gradient(to bottom, #DE3964, rgba(154, 40, 87, 0.24)), url("http://nightlifeassociates.com/wp-content/uploads/2014/03/hakkasan-nightclub_tiesto-smalls.jpg");
+  box-shadow: 0px 0px 0px 2px rgba(68, 56, 241, 0.16) inset, 0px 0px 10px 0px #00d1b2;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#00d1b2), to(rgba(40, 54, 173, 0.363))), url("http://nightlifeassociates.com/wp-content/uploads/2014/03/hakkasan-nightclub_tiesto-smalls.jpg");
+  background-image: linear-gradient(to bottom, #00d1b2, rgba(114, 116, 236, 0.24)), url("http://nightlifeassociates.com/wp-content/uploads/2014/03/hakkasan-nightclub_tiesto-smalls.jpg");
 }
 .home-btn:hover {
-  box-shadow: 0px 0px 0px 2px rgba(255, 255, 255, 0.16) inset, 0px 0px 30px 0px #DE3964;
+  box-shadow: 0px 0px 0px 2px rgba(255, 255, 255, 0.16) inset, 0px 0px 30px 0px #00d1b2;
 }
 .home-bt:hover:after {
   -webkit-transform: scale(1);
@@ -181,6 +181,6 @@ h2 {
   content: "";
 } */
 .home-btn b {
-  color: #F764FF;
+  color: blue;
   font-weight: 700;
 }
