create convertion from html to pdf-move to service

--- a/front-end/src/app/dialog-manager/info-dialog/info-dialog.component.html
+++ b/front-end/src/app/dialog-manager/info-dialog/info-dialog.component.html
@@ -10,7 +10,9 @@
       <p>{{users_recommendations}}</p>
     </section>
     <footer class="modal-card-foot">
-      <button class="button is-success" (click)="displayForm">Display Form</button>
+      <button class="button is-success" (click)="displayForm()">Display Form</button>
+      <button class="button is-success" (click)="downloadForm()">Download Form</button>
+      <button class="button is-success" (click)="submitForm()">Submit</button>
     </footer>
   </div>
 </div>
