added workin picnic anfd organize forms

--- a/front-end/src/app/event/new-event/form-modal/form-modal.component.html
+++ b/front-end/src/app/event/new-event/form-modal/form-modal.component.html
@@ -23,10 +23,10 @@
             <option value="birth-day-option">
               <label>Birth-Day Form</label>
             </option>
-            <option value="organize-form">
+            <option value="organize-option">
               <label>Organize Trip Form</label>
             </option>
-            <option value="picnic-form">
+            <option value="picnic-option">
               <label>Picnic Form</label>
             </option>
           </select>
