--- a/front-end/src/app/event/new-event/forms/organize-trip-form/organize-trip-form.component.html
+++ b/front-end/src/app/event/new-event/forms/organize-trip-form/organize-trip-form.component.html
@@ -1,1 +1,50 @@
-<p>organize-trip-form works!</p>
+
+
+<div ngModelGroup="{{modelGroupName}}">
+
+    <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
+        <mat-form-field fxFlex="45">
+            <input matInput placeholder="How much mode you willing to invest" name="money" ngModel i18n-placeholder required>
+        </mat-form-field>
+    </div>
+  
+  </div>
+  
+  <div ngModelGroup="{{modelGroupName}}">
+  
+        <!--Prefer Locations-->
+        <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="30px">
+          <mat-label ngModel i18n>Prefer Locations:</mat-label>
+          <mat-checkbox value="Open Location" i18n>Open Location</mat-checkbox>
+          <mat-checkbox value="Close Location" i18n>Close Location</mat-checkbox>
+          <mat-checkbox value="Don't Mind" i18n>Don't Mind</mat-checkbox>
+        </div>
+  </div>
+  
+  
+  <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
+  
+      <mat-form-field fxFlex="20" ngModel i18n-placeholder required>
+          <mat-label i18n>Preferred Area</mat-label >
+              <mat-select required>
+                  <mat-option value="Center Area" i18n>Center Area</mat-option>
+                  <mat-option value="South Area" i18n>South Area</mat-option>
+                  <mat-option value="North Area" i18n>North Area</mat-option>
+          </mat-select>
+        </mat-form-field>
+  </div>
+  
+  <div ngModelGroup="{{modelGroupName}}">
+  
+    <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
+  
+        <mat-form-field fxFlex="20">
+            <input matInput [matDatepicker]="picker" placeholder="Prefer Date" name="preferDate" ngModel i18n-placeholder required>
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+  
+    </div>
+  
+   
+  </div>
