created about component

--- a/front-end/src/app/home/home/home.component.html
+++ b/front-end/src/app/home/home/home.component.html
@@ -22,13 +22,13 @@
   </div>
 </header>
 <!--Footer insertion  to fix-->
-<app-footer></app-footer>
+
 <app-about ></app-about>
 <div class="discription-wrapper">
 
   <img src="../../../assets/img/discription-image.jpg">
 </div>
-
+<app-about-us></app-about-us>
 
 <!-- <div class="discription-wrapper">
 </div> -->
