working on organized form

--- a/front-end/src/app/event/new-event/forms/birthday-form/birthday-form.component.html
+++ b/front-end/src/app/event/new-event/forms/birthday-form/birthday-form.component.html
@@ -4,7 +4,7 @@
 
   <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
       <mat-form-field fxFlex="45">
-          <input matInput placeholder="How much mode you willing to invest" name="money" ngModel i18n-placeholder required>
+          <input matInput placeholder="How much money you willing to invest" name="money" ngModel i18n-placeholder required>
       </mat-form-field>
   </div>
 
