--- a/front-end/src/app/home/home/home.component.html
+++ b/front-end/src/app/home/home/home.component.html
@@ -24,10 +24,10 @@
 <!--Footer insertion  to fix-->
 
 <app-about ></app-about>
-<div class="discription-wrapper">
+<!-- <div class="discription-wrapper">
 
   <img src="../../../assets/img/discription-image.jpg">
-</div>
+</div> -->
 <app-about-us></app-about-us>
 
 <!-- <div class="discription-wrapper">
